--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1 class="product-title">Union Jack Socks</h1>
 
     <section class="product-image">
-        <img src="image/R.png" alt="Union Jack Socks" width="300px">
+        <img src="images/R.png" alt="Union Jack Socks" width="300px">
     </section>
 
     <section class="product-options">
