--- a/Website/goose.html
+++ b/Website/goose.html
@@ -118,60 +118,62 @@
             <!-- Menu Card -->
             <div class="col">
                 <div class="card bg-dark text-white">
-                    <img src="images/instant-ramen.jpg" class="card-img-top" alt="Menu Item">
+                    <a href="breakfast.html">
+                        <img src="./images/british-food-1.jpg" class="card-img-top" alt="Menu Item">
+                    </a>
                     <div class="card-body">
-                        <h5 class="card-title">Chicken Flavour Ramen</h5>
-                        <p class="card-text">£29.99</p>
+                        <h5 class="card-title">British Breakfast</h5>
+                        <p class="card-text">£9.99</p>
                     </div>
                 </div>
             </div>
 
             <div class="col">
                 <div class="card bg-dark text-white">
-                    <img src="images/instant-ramen.jpg" class="card-img-top" alt="Menu Item">
+                    <img src="./images/british-food-2.jpg" class="card-img-top" alt="Menu Item">
                     <div class="card-body">
-                        <h5 class="card-title">Beef Flavour Ramen</h5>
-                        <p class="card-text">£29.99</p>
+                        <h5 class="card-title">British Lunch</h5>
+                        <p class="card-text">£19.99</p>
                     </div>
                 </div>
             </div>
 
             <div class="col">
                 <div class="card bg-dark text-white">
-                    <img src="images/instant-ramen.jpg" class="card-img-top" alt="Menu Item">
+                    <img src="./images/british-food-3.jpg" class="card-img-top" alt="Menu Item">
                     <div class="card-body">
-                        <h5 class="card-title">Duck Flavour Ramen</h5>
-                        <p class="card-text">£29.99</p>
+                        <h5 class="card-title">Pies</h5>
+                        <p class="card-text">£14.99</p>
                     </div>
                 </div>
             </div>
 
             <div class="col">
                 <div class="card bg-dark text-white">
-                    <img src="images/instant-ramen.jpg" class="card-img-top" alt="Menu Item">
+                    <img src="./images/Fish-and-Chips.jpg" class="card-img-top" alt="Menu Item">
                     <div class="card-body">
-                        <h5 class="card-title">Pork Flavour Ramen</h5>
-                        <p class="card-text">£29.99</p>
+                        <h5 class="card-title">Fish and Chips</h5>
+                        <p class="card-text">£19.99</p>
                     </div>
                 </div>
             </div>
 
             <div class="col">
                 <div class="card bg-dark text-white">
-                    <img src="images/instant-ramen.jpg" class="card-img-top" alt="Menu Item">
+                    <img src="./images/Yorkshire-Pudding.jpg" class="card-img-top" alt="Menu Item">
                     <div class="card-body">
-                        <h5 class="card-title">Prawn Flavour Ramen</h5>
-                        <p class="card-text">£29.99</p>
+                        <h5 class="card-title">Yorkshire Pudding</h5>
+                        <p class="card-text">£14.99</p>
                     </div>
                 </div>
             </div>
 
             <div class="col">
                 <div class="card bg-dark text-white">
-                    <img src="images/cup-ramen.jpg" class="card-img-top" alt="Menu Item">
+                    <img src="./images/Toad-in-the-Hole.jpg" class="card-img-top" alt="Menu Item">
                     <div class="card-body">
-                        <h5 class="card-title">Limited Edition Jordan's Special Ramen</h5>
-                        <p class="card-text">£99.99</p>
+                        <h5 class="card-title">Toad in the Hole</h5>
+                        <p class="card-text">£19.99</p>
                     </div>
                 </div>
             </div>
@@ -181,14 +183,14 @@
 
     <!-- Jumbotron -->
     <div class="mt-4 p-5  text-white text-center rounded" style="background-color: #212529;">
-        <h1>Time For Some Ramen!</h1>
+        <h1>Time For Some British food!</h1>
         <button class="btn order-button my-4">Order Now</button>
     </div>
 
 
     <!-- Footer -->
     <footer class="text-center mt-4 py-3">
-        © 2024 Warwick Ramen
+        © 2024 Warwick
     </footer>
 
     <!-- Bootstrap JS -->
